--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,3 @@
-/******************************************************************
-  Template Name: Fashi
-  Description: Fashi eCommerce HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com/
-  Version: 1.0
-  Created: Colorlib
-******************************************************************/
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Banner Section
-6.  Deal Of The Week
-7.  Latest Blog
-8.  Logo Carousel
-9.  Contact
-10.  Footer
-
--------------------------------------------------------------------*/
-
-/*----------------------------------------*/
-/* Template default CSS
-/*----------------------------------------*/
-
 html,
 body {
 	height: 100%;
@@ -856,6 +823,21 @@ ol {
 	opacity: 0;
 }
 
+.hero-items .single-hero-items .preview {
+	position: relative;
+	display: flex;
+}
+
+.hero-items .single-hero-items .preview .play-icon {
+	color: #ffffff;
+	display: block;
+	padding: 10px 20px;
+	margin-left: 10px;
+	cursor: pointer;
+	transition: 0.5s ease all;
+	background-color: #4BEEBF;
+}
+
 .hero-items .off-card {
 	height: 154px;
 	width: 154px;
@@ -1176,7 +1158,7 @@ ol {
 .product-item .pi-pic .sale {
 	color: #ffffff;
 	font-size: 10px;
-	background: #fc4040;
+	background: #4BEEBF;
 	position: absolute;
 	left: 0;
 	top: 20px;
@@ -1229,6 +1211,12 @@ ol {
 	color: #252525;
 	display: block;
 	padding: 16px 18px 12px 19px;
+	cursor: pointer;
+	transition: 0.5s ease all;
+}
+
+.product-item .pi-pic ul li a:hover {
+	background: #4BEEBF;
 }
 
 .product-item .pi-text {
@@ -1472,6 +1460,15 @@ ol {
 }
 
 /*---------------------
+  Play Audio
+-----------------------*/
+
+#player div a i {
+	cursor: pointer;
+}
+
+
+/*---------------------
   Partner Logo
 -----------------------*/
 
@@ -1711,6 +1708,27 @@ ol {
 /*---------------------
   Product Shop
 -----------------------*/
+
+#menuBtnContainer {
+	text-align: left;
+	display: block;
+}
+
+#menuBtnContainer button {
+	display: block;
+}
+
+.filterDiv {
+display: none;
+}
+
+.show {
+display: block;
+}
+
+.btn.active {
+color: #4BEEBF;
+}
 
 .product-shop {
 	padding-top: 80px;
